<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Helping Hand</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Helping Hand</string>
    <string name="gj">GJ</string>
    <string name="title_activity_login">Login</string>
    <string name="go">GO</string>
    <string name="newone">New Account??</string>
    <string name="forget">Forgot Password??</string>
    <string name="ln">Login ID</string>
    <string name="lp">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="search">Search</string>
    <string name="file">File(s)</string>
    <string name="thing">File</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Shared</string>
    <string name="title_section3">My Groups</string>
    <string name="title_section4">Notice Board</string>
    <string name="title_section5">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_build__in__drawer">Drawer</string>
    <string name="check">Remember Me</string>
    <string name="filename">junk</string>
    <string name="key">Flag</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile_setting">Profile</string>
    <string name="setting_name">Name    </string>
    <string name="setting_password">Password</string>
    <string name="uncheck">Uncheck &quot;Remember Me&quot;</string>
    <string name="submit">Submit</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_new_ac">New Account</string>
    <string name="new_email">Email ID</string>
    <string name="lp_again">Password Again</string>
    <string name="term">I agree to the &quot;Terms of Use&quot;</string>
    <string name="news">Send me newsletter &amp; other updates</string>
    <string name="new_already">Have Account? Click Here</string>
    <string name="ps_old_pass">Old Password</string>
    <string name="ps_new_pass">New Password</string>
    <string name="folder">Folder</string>
    <string name="add">Add File</string>
    <string name="Cam">Insert Image</string>
    <string name="forget_story_1">Enter your User Id and Mail Id below.</string>
    <string name="forget_story_2">Your new password will be sent to you on this mail id.</string>
    <string name="forget_story_3"> Thus, make sure that only you have the access to your Email account.</string>
    <string name="user_detail">Basic Settings</string>
    <string name="shared_user_id">user_id</string>
    <string name="shared_user_name">name</string>
    <string name="title_activity_my_tab">Home</string>
    <string name="title_activity_my__folder__fragment">Helping Hand</string>
    <string name="title_activity_home_material">Home</string>
    <string name="directory">Path File!</string>
    <string name="dir_fol">Folder</string>
    <string name="dir_path">Path</string>
    <string name="dir_shared_fol">Shared Folder</string>
    <string name="dir_shared_path">Shared Path</string>
    <string name="fold_alert">Enter New Folder Name</string>
    <string name="title_activity_share">Share</string>
    <string name="share_ask_uid">Enter User-ID</string>
    <string name="title_activity_transparent_for_input">Select File..</string>
    <string name="dp">dp_file</string>
    <string name="mygroup">My Groups</string>
    <string name="title_activity_group__detail">Group Detail</string>
    <string name="shareNotice">Write the User-ID below seprated by comma(\',\') or select a group from the list.</string>
    <string name="title_activity_home1">Home</string>

</resources>
