<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <group android:checkableBehavior="all">
	    <item
	        android:id="@+id/design_home"
	        android:icon="@drawable/ic_home_white_24dp"
	        android:title="@string/title_section1"/>
	    <item
	        android:id="@+id/design_shared"
	        android:icon="@drawable/ic_supervisor_account_white_24dp"
	        android:title="@string/title_section2"/>
	    
	    <item
	        android:id="@+id/design_teacher"
	        android:icon="@drawable/ic_perm_contact_calendar_white_24dp"
	        android:title="@string/title_section3"/>
	    <item
	        android:id="@+id/design_setting"
	        android:icon="@drawable/ic_settings_applications_white_24dp"
	        android:title="@string/title_section4"/>
	    
	</group>
    

</menu>
