<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC1895ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="GJ.helpinghand.New_ac" >

    <Button
        android:id="@+id/already"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/new_already"
        android:textColor="#66FF33" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/already"
        android:layout_centerHorizontal="true"
        android:background="@drawable/go_button"
        android:text="@string/go"
        android:textColor="#66FF33" />

 	<EditText
        android:id="@+id/mail_id"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/outline"
        android:ems="1"
        android:hint="@string/new_email"
        android:textColor="#CC66FF33"         
        android:inputType="textEmailAddress" />

 	<EditText
 	    android:id="@+id/password"
 	    android:layout_width="match_parent"
 	    android:layout_height="35dp"
 	    android:layout_alignLeft="@+id/user_id"
 	    android:layout_alignStart="@+id/user_id"
 	    android:layout_below="@+id/user_id"
 	    android:layout_marginTop="30dp"
 	    android:background="@drawable/outline"
 	    android:ems="1"
 	    android:hint="@string/lp"
 	    android:inputType="textPassword"
 	    android:textColor="#CC66FF33" />

 	<EditText
 	    android:id="@+id/user_id"
 	    android:layout_width="match_parent"
 	    android:layout_height="35dp"
 	    android:layout_below="@+id/mail_id"
 	    android:layout_marginTop="30dp"
 	    android:background="@drawable/outline"
 	    android:ems="1"
 	    android:hint="@string/ln"
 	    android:textColor="#CC66FF33" />

 	<EditText
 	    android:id="@+id/password_again"
 	    android:layout_width="match_parent"
 	    android:layout_height="30dp"
 	    android:layout_centerVertical="true"
  		android:layout_below="@+id/password"
 	    android:background="@drawable/outline"
 	    android:layout_marginTop="30dp"
 	    android:ems="1"
 	    android:hint="@string/lp_again"
 	    android:inputType="textPassword"
 	    android:textColor="#CC66FF33" />

 	<CheckBox
 	    android:id="@+id/agree"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/password_again"
 	    android:layout_marginTop="25dp"
 	    android:textStyle="bold"
 	    android:text="@string/term"
 	    android:textColor="#66FF33" />

 	<CheckBox
 	    android:id="@+id/news"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@+id/agree"
 	    android:layout_centerHorizontal="true"
 	    android:textColor="#66FF33"
 	    android:text="@string/news" />

</RelativeLayout>