<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC1895ff"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="GJ.helpinghand.Forgot_password" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_story_1"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_story_2"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_story_3"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/outline"
            android:hint="@string/ln"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"
            android:ems="1" />

        <EditText
            android:id="@+id/mail_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"         
            android:layout_below="@+id/user_id"
            android:layout_marginTop="39dp"
            android:ems="1"
            android:background="@drawable/outline"
            android:hint="@string/new_email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"
            android:background="@drawable/outline"
            android:text="@string/submit" />
        
    </RelativeLayout>

</LinearLayout>
