<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC1895ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="GJ.helpinghand.Login" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/button2"
        android:background="@drawable/outline"
        android:layout_centerHorizontal="true"
        android:ems="1"
        android:textColor="#CC66FF33"
        android:hint="@string/lp"
        android:inputType="textPassword" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="74dp"
        android:background="@drawable/outline"
        android:ems="1"
        android:hint="@string/ln"
        android:textColor="#CC66FF33" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:layout_below="@+id/autoCompleteTextView1"
         android:textColor="#66FF33"
        android:text="@string/forget" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
         android:textColor="#66FF33"
        android:layout_alignParentBottom="true"
        android:text="@string/newone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textColor="#66FF33"
        android:layout_marginBottom="56dp"
        android:background="@drawable/go_button"
        android:text="@string/go" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textColor="#66FF33"
        android:checked="false"
        android:text="@string/check" />

</RelativeLayout>
