<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2E303C"
    tools:context="GJ.helpinghand.Profile_setting" >

    <RelativeLayout
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/hh_id" >

        <TextView
            android:id="@+id/profile_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#66FF33"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/setting_name"
            android:textColor="#66FF33"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="212dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/go_button"
            android:ems="1"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textCursorDrawable="@color/my_primary_text"
            android:textColor="@android:color/darker_gray" />
        
        <Button
            android:id="@+id/edit_name"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/ic_menu_edit" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/setting_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#66FF33"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/edit_pass"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView1"
            android:layout_gravity="top"
            android:background="@android:drawable/ic_menu_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView1"
            android:paddingTop="15dp"
            android:orientation="vertical" >
            
            <EditText
                    android:id="@+id/old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/outline"
                    android:hint="@string/ps_old_pass"
                    android:inputType="textPassword" />
           <EditText
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/outline"
                    android:hint="@string/ps_new_pass"
                    android:inputType="textPassword" />
        
        </LinearLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/go_button"
            android:layout_centerHorizontal="true"
            android:textColor="#66FF33"
            android:text="@string/submit" />

    </RelativeLayout>

</LinearLayout>